html/simple-html/template.cform.yaml
# KEYPAIR_NAME="project-keypair"
# aws ec2 create-key-pair --key-name $KEYPAIR_NAME --query "KeyMaterial" --output text > $HOME/$KEYPAIR_NAME.pem
# aws cloudformation deploy --stack-name simple-ec2-python --template-file cloudformation/ec2-simple-python/template.cform.yaml --parameter-overrides KeyName=$KEYPAIR_NAME
# PUBLIC_IP=$(aws cloudformation describe-stacks --stack-name simple-ec2-python --query "Stacks[0].Outputs[?OutputKey=='InstancePublicIP'].OutputValue" --output text)
# echo "http://$PUBLIC_IP/"
# echo "http://$PUBLIC_IP/images/pets/tuna/tuna-1.png"
# time curl "http://$PUBLIC_IP/images/pets/tuna/tuna-bigfile.jpg"
# 
# ab 
Description: EC2 instance running a Python HTTP server

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access
    Type: AWS::EC2::KeyPair::KeyName
    Default: "default"

  GitHubUser:
    Description: GitHub username owning the repo
    Type: String
    Default: "faermanj"

  GitHubRepo:
    Description: GitHub repository name
    Type: String
    Default: "daws"

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP and SSH access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  SimplePythonServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      ImageId:
        Fn::Sub: "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}"
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: SimplePythonServer
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y unzip python3 wget
          cd /home/ec2-user
          wget https://github.com/${GitHubUser}/${GitHubRepo}/archive/refs/heads/main.zip -O repo.zip
          unzip repo.zip
          cd ${GitHubRepo}-main/html/simple-html/
          chown -R ec2-user:ec2-user /home/ec2-user/
          nohup python3 -m http.server 80 --bind 0.0.0.0 &


Outputs:
  InstancePublicIP:
    Description: Public IP of the EC2 instance
    Value: !GetAtt SimplePythonServer.PublicIp
  WebURL:
    Description: URL to access the web server
    Value: !Sub "http://${SimplePythonServer.PublicDnsName}/"
